--- a/XDBF/achievementgpd.ui
+++ b/XDBF/achievementgpd.ui
@@ -30,6 +30,11 @@
          <height>64</height>
         </size>
        </property>
+       <property name="font">
+        <font>
+         <family>Arial</family>
+        </font>
+       </property>
        <property name="frameShape">
         <enum>QFrame::Box</enum>
        </property>
@@ -46,6 +51,11 @@
      </item>
      <item row="0" column="1">
       <widget class="QLabel" name="label">
+       <property name="font">
+        <font>
+         <family>Arial</family>
+        </font>
+       </property>
        <property name="text">
         <string>Game Name:</string>
        </property>
