--- a/XDBF/achievementviewer.ui
+++ b/XDBF/achievementviewer.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>410</width>
+    <width>383</width>
     <height>258</height>
    </rect>
   </property>
@@ -15,6 +15,11 @@
     <width>410</width>
     <height>258</height>
    </size>
+  </property>
+  <property name="font">
+   <font>
+    <family>Arial</family>
+   </font>
   </property>
   <property name="windowTitle">
    <string>Achievement Entry</string>
@@ -32,6 +37,11 @@
            <height>0</height>
           </size>
          </property>
+         <property name="font">
+          <font>
+           <family>Arial</family>
+          </font>
+         </property>
          <property name="text">
           <string>&lt;b&gt;Gamerscore: &lt;b&gt;</string>
          </property>
@@ -47,6 +57,11 @@
            <width>239</width>
            <height>0</height>
           </size>
+         </property>
+         <property name="font">
+          <font>
+           <family>Arial</family>
+          </font>
          </property>
          <property name="text">
           <string>&lt;b&gt;Name: &lt;/b&gt;</string>
@@ -70,6 +85,11 @@
            <height>0</height>
           </size>
          </property>
+         <property name="font">
+          <font>
+           <family>Arial</family>
+          </font>
+         </property>
          <property name="text">
           <string>&lt;b&gt;Type: &lt;/b&gt;</string>
          </property>
@@ -86,6 +106,11 @@
            <height>0</height>
           </size>
          </property>
+         <property name="font">
+          <font>
+           <family>Arial</family>
+          </font>
+         </property>
          <property name="text">
           <string>&lt;b&gt;Locked Description: &lt;/b&gt;</string>
          </property>
@@ -101,6 +126,11 @@
            <width>239</width>
            <height>0</height>
           </size>
+         </property>
+         <property name="font">
+          <font>
+           <family>Arial</family>
+          </font>
          </property>
          <property name="text">
           <string>&lt;b&gt;Unlocked Description: &lt;/b&gt;</string>
@@ -143,6 +173,11 @@
              <height>64</height>
             </size>
            </property>
+           <property name="font">
+            <font>
+             <family>Arial</family>
+            </font>
+           </property>
            <property name="frameShape">
             <enum>QFrame::Box</enum>
            </property>
@@ -156,19 +191,6 @@
             <set>Qt::AlignCenter</set>
            </property>
           </widget>
-         </item>
-         <item>
-          <spacer name="horizontalSpacer">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
          </item>
         </layout>
        </item>
@@ -189,6 +211,11 @@
          </item>
          <item>
           <widget class="QPushButton" name="pushButton">
+           <property name="font">
+            <font>
+             <family>Arial</family>
+            </font>
+           </property>
            <property name="layoutDirection">
             <enum>Qt::LeftToRight</enum>
            </property>
@@ -212,19 +239,6 @@
            </property>
           </widget>
          </item>
-         <item>
-          <spacer name="horizontalSpacer_3">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
         </layout>
        </item>
        <item>
@@ -244,6 +258,11 @@
          </item>
          <item>
           <widget class="QPushButton" name="pushButton_2">
+           <property name="font">
+            <font>
+             <family>Arial</family>
+            </font>
+           </property>
            <property name="text">
             <string>Save Entry</string>
            </property>
@@ -251,19 +270,6 @@
             <bool>false</bool>
            </property>
           </widget>
-         </item>
-         <item>
-          <spacer name="horizontalSpacer_6">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
          </item>
         </layout>
        </item>
@@ -277,13 +283,24 @@
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <widget class="QLabel" name="label_5">
+         <property name="font">
+          <font>
+           <family>Arial</family>
+          </font>
+         </property>
          <property name="text">
           <string>&lt;b&gt;Unlocked Time: &lt;/b&gt;</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QDateTimeEdit" name="unlockedTimeDte"/>
+        <widget class="QDateTimeEdit" name="unlockedTimeDte">
+         <property name="font">
+          <font>
+           <family>Arial</family>
+          </font>
+         </property>
+        </widget>
        </item>
       </layout>
      </item>
@@ -291,6 +308,11 @@
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <widget class="QLabel" name="label_7">
+         <property name="font">
+          <font>
+           <family>Arial</family>
+          </font>
+         </property>
          <property name="text">
           <string>&lt;b&gt;State: &lt;/b&gt;</string>
          </property>
@@ -298,6 +320,11 @@
        </item>
        <item>
         <widget class="QComboBox" name="stateCmbx">
+         <property name="font">
+          <font>
+           <family>Arial</family>
+          </font>
+         </property>
          <item>
           <property name="text">
            <string>Locked</string>
