--- a/XDBF/addressconverter.ui
+++ b/XDBF/addressconverter.ui
@@ -10,6 +10,11 @@
     <height>127</height>
    </rect>
   </property>
+  <property name="font">
+   <font>
+    <family>Arial</family>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>Address Converter</string>
   </property>
@@ -18,6 +23,11 @@
     <layout class="QGridLayout" name="gridLayout">
      <item row="0" column="0">
       <widget class="QLabel" name="label">
+       <property name="font">
+        <font>
+         <family>Arial</family>
+        </font>
+       </property>
        <property name="text">
         <string>Address Specifier:</string>
        </property>
@@ -31,6 +41,11 @@
          <height>0</height>
         </size>
        </property>
+       <property name="font">
+        <font>
+         <family>Arial</family>
+        </font>
+       </property>
        <property name="minimum">
         <number>0</number>
        </property>
@@ -41,6 +56,11 @@
      </item>
      <item row="1" column="0">
       <widget class="QLabel" name="label_2">
+       <property name="font">
+        <font>
+         <family>Arial</family>
+        </font>
+       </property>
        <property name="text">
         <string>Real Address:</string>
        </property>
@@ -54,6 +74,11 @@
          <height>0</height>
         </size>
        </property>
+       <property name="font">
+        <font>
+         <family>Arial</family>
+        </font>
+       </property>
        <property name="minimum">
         <number>0</number>
        </property>
@@ -64,6 +89,11 @@
      </item>
      <item row="2" column="1">
       <widget class="QPushButton" name="pushButton">
+       <property name="font">
+        <font>
+         <family>Arial</family>
+        </font>
+       </property>
        <property name="text">
         <string>Convert</string>
        </property>
