--- a/XDBF/binarydialog.ui
+++ b/XDBF/binarydialog.ui
@@ -10,6 +10,11 @@
     <height>277</height>
    </rect>
   </property>
+  <property name="font">
+   <font>
+    <family>Arial</family>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>Binary Setting Entry</string>
   </property>
@@ -19,6 +24,11 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QTableWidget" name="tableWidget">
+     <property name="font">
+      <font>
+       <family>Courier New</family>
+      </font>
+     </property>
      <property name="lineWidth">
       <number>1</number>
      </property>
