--- a/XDBF/binaryinjector.ui
+++ b/XDBF/binaryinjector.ui
@@ -10,6 +10,11 @@
     <height>157</height>
    </rect>
   </property>
+  <property name="font">
+   <font>
+    <family>Arial</family>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>Binary Injector</string>
   </property>
