--- a/XDBF/imageinjectordialog.ui
+++ b/XDBF/imageinjectordialog.ui
@@ -10,6 +10,11 @@
     <height>242</height>
    </rect>
   </property>
+  <property name="font">
+   <font>
+    <family>Arial</family>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
@@ -21,6 +26,11 @@
     <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0">
      <item>
       <widget class="QLabel" name="image">
+       <property name="font">
+        <font>
+         <family>Arial</family>
+        </font>
+       </property>
        <property name="text">
         <string>Open an image...</string>
        </property>
@@ -37,6 +47,11 @@
          <height>13</height>
         </size>
        </property>
+       <property name="font">
+        <font>
+         <family>Arial</family>
+        </font>
+       </property>
        <property name="text">
         <string>(width, height)</string>
        </property>
@@ -51,6 +66,11 @@
     <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,0">
      <item row="0" column="0">
       <widget class="QLabel" name="label_3">
+       <property name="font">
+        <font>
+         <family>Arial</family>
+        </font>
+       </property>
        <property name="text">
         <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
@@ -62,6 +82,11 @@ p, li { white-space: pre-wrap; }
      </item>
      <item row="0" column="1">
       <widget class="QComboBox" name="comboBox">
+       <property name="font">
+        <font>
+         <family>Arial</family>
+        </font>
+       </property>
        <property name="editable">
         <bool>false</bool>
        </property>
@@ -73,7 +98,13 @@ p, li { white-space: pre-wrap; }
       </widget>
      </item>
      <item row="1" column="0" colspan="2">
-      <widget class="QLineEdit" name="lineEdit"/>
+      <widget class="QLineEdit" name="lineEdit">
+       <property name="font">
+        <font>
+         <family>Arial</family>
+        </font>
+       </property>
+      </widget>
      </item>
      <item row="2" column="0" colspan="2">
       <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0">
@@ -84,6 +115,11 @@ p, li { white-space: pre-wrap; }
            <width>80</width>
            <height>24</height>
           </size>
+         </property>
+         <property name="font">
+          <font>
+           <family>Arial</family>
+          </font>
          </property>
          <property name="text">
           <string>Cancel</string>
@@ -105,6 +141,11 @@ p, li { white-space: pre-wrap; }
            <height>24</height>
           </size>
          </property>
+         <property name="font">
+          <font>
+           <family>Arial</family>
+          </font>
+         </property>
          <property name="text">
           <string>Open Image</string>
          </property>
@@ -124,6 +165,11 @@ p, li { white-space: pre-wrap; }
            <width>80</width>
            <height>24</height>
           </size>
+         </property>
+         <property name="font">
+          <font>
+           <family>Arial</family>
+          </font>
          </property>
          <property name="text">
           <string>Add Image</string>
