--- a/XDBF/mainwindow.ui
+++ b/XDBF/mainwindow.ui
@@ -10,6 +10,11 @@
     <height>364</height>
    </rect>
   </property>
+  <property name="font">
+   <font>
+    <family>Arial</family>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>XDBF Manager - ALPHA BUILD</string>
   </property>
