--- a/XDBF/achievementinjectordialog.ui
+++ b/XDBF/achievementinjectordialog.ui
@@ -7,13 +7,19 @@
     <x>0</x>
     <y>0</y>
     <width>455</width>
-    <height>313</height>
+    <height>334</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>455</width>
+    <height>334</height>
+   </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>455</width>
-    <height>313</height>
+    <height>334</height>
    </size>
   </property>
   <property name="font">
