--- a/XDBF/titleinjectordialog.ui
+++ b/XDBF/titleinjectordialog.ui
@@ -18,7 +18,7 @@
   <property name="windowTitle">
    <string>Title Adder Dialog</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout_3">
+  <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="0,5,0">
    <item>
     <layout class="QVBoxLayout" name="verticalLayout_4">
      <item>
